// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ScalprumComponent /> should render error component 1`] = `
<div>
  <h1>
    Custom error component
  </h1>
</div>
`;

exports[`<ScalprumComponent /> should render fallback component 1`] = `
<div>
  <h1>
    Suspense fallback
  </h1>
</div>
`;

exports[`<ScalprumComponent /> should render fallback component 2`] = `
<div>
  <h1>
    Suspense fallback
  </h1>
</div>
`;

exports[`<ScalprumComponent /> should render test component 1`] = `
<div>
  loading
</div>
`;

exports[`<ScalprumComponent /> should render test component 2`] = `
<div>
  <span>
    Test
  </span>
</div>
`;

exports[`<ScalprumComponent /> should render test component with manifest 1`] = `
<div>
  <span>
    Test
  </span>
</div>
`;

exports[`<ScalprumComponent /> should retrieve module from scalprum cache 1`] = `
<div>
  <div
    data-testid="cached-component"
  >
    Cached component
  </div>
</div>
`;

exports[`<ScalprumComponent /> should skip scalprum cache 1`] = `
<div>
  loading
</div>
`;
